--- a/form.html
+++ b/form.html
@@ -1,108 +1,184 @@
-<h1 style="text-align: center;font-family: algerian;color:red">PROJECT S</h1>
-
-<br>
-
-<a href="project.html">for more information about projects click here</a>
-<br>
 
 
 
 
 
-<form>
-  <div>                                                                
-    <br>
-    <div  class="form-row">
-      <label for="Name">Name:</label>
-      <input id="Name" type="text" name="Name"
-</div>  
-</br>
-<br>
-<div  class="form-row">
-    <label for="Surname">Surname:</label>
-    <input id="Surname" type="text" name="Surname"
-</div>
-</br>
-<br>
-<div  class="form-row">
-    <label for="Nationality">Nationality:</label>
-    <input id="Nationality" type="text" name="Nationality"
-</div>
-</br>
-<br>
-<label>
-    <input type="checkbox" name="Gender">
-    MALE
-    </label>
-    
-    <label>
-    <input type="checkbox" name="Gender">
-    FEMALE
-    </label>
-</br>
-<br>
-<div  class="form-row">
-    <label for="Province">Province:</label>
-    <input id="Province" type="text" name="Province"
-</div>
-</br>
-<br>
-<div  class="form-row">
-    <label for="Physical Address">Physical Address:</label>
-    <input id="Physical Address" type="text" name="Physical Address"
-</div>
-</br>
-<br>
-<div  class="form-row">
-    <label for="Name of the project">Name of the project:</label>
-    <input id="Name of the project" type="text" name="Name of the project"
-</div>
-</br>
-<br>
-<div  class="form-row">
-    <label for="Explain the project">Explain the project:</label>
-    <input id="Explain the project" type="text" name="Explain the project"
-</div>
-</br>
 
-<br>
 
-<input type="submit" value="Submit">
-</br>
 
-<title><form</title>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project S</title>
     <style type="text/css">
-      body{
-        background-image: url("projectb.jpg");        
-      }
+        /* Background styling */
+        body {
+            background-image: url("projectb.jpg");
+            background-size: cover;
+            background-attachment: fixed;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            color: #333;
+        }
+
+        /* Heading styling */
+        h1 {
+            text-align: center;
+            font-family: "Algerian", serif;
+            color: red;
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+
+        /* Link styling */
+        a {
+            color: blue;
+            text-decoration: none;
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Form styling */
+        form {
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 500px;
+        }
+
+        .form-row {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-size: 1.1rem;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+            transition: box-shadow 0.3s ease;
+        }
+
+        input[type="text"]:focus,
+        input[type="file"]:focus {
+            border-color: #66afe9;
+            outline: none;
+            box-shadow: 0 0 10px rgba(102, 175, 233, 0.8); /* Light blue glow effect */
+        }
+
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        /* Footer styling */
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #555;
+        }
     </style>
-  </head>
+</head>
+<body>
+    <h1>PROJECT S</h1>
 
-  </div>  
+    <a href="project.html">For more information about projects, click here</a>
 
+    <form>
+        <div class="form-row">
+            <label for="Name">Name:</label>
+            <input id="Name" type="text" name="Name">
+        </div>
 
+        <div class="form-row">
+            <label for="Surname">Surname:</label>
+            <input id="Surname" type="text" name="Surname">
+        </div>
 
-  
+        <div class="form-row">
+            <label for="Nationality">Nationality:</label>
+            <input id="Nationality" type="text" name="Nationality">
+        </div>
 
-   <br>
-  <p> upload project pictures </p>
+        <div class="form-row">
+            <label>Gender:</label>
+            <label>
+                <input type="checkbox" name="Gender"> MALE
+            </label>
+            <label>
+                <input type="checkbox" name="Gender"> FEMALE
+            </label>
+        </div>
 
-  </p><form method="post" enctype="multipart/form-data" form action="upload.php">
-    <input type="file" name="pic" />
-    <input type="submit" value="Upload" />
+        <div class="form-row">
+            <label for="Province">Province:</label>
+            <input id="Province" type="text" name="Province">
+        </div>
+
+        <div class="form-row">
+            <label for="Physical Address">Physical Address:</label>
+            <input id="Physical Address" type="text" name="Physical Address">
+        </div>
+
+        <div class="form-row">
+            <label for="Name of the project">Name of the project:</label>
+            <input id="Name of the project" type="text" name="Name of the project">
+        </div>
+
+        <div class="form-row">
+            <label for="Explain the project">Explain the project:</label>
+            <input id="Explain the project" type="text" name="Explain the project">
+        </div>
+
+        <input type="submit" value="Submit">
     </form>
-</b>
 
-<br>
-<footer>
-<p>All rights reserved</p>
-</footer>
-</br>
+    <p>Upload project pictures:</p>
+    <form method="post" enctype="multipart/form-data" action="upload.php">
+        <input type="file" name="pic">
+        <input type="submit" value="Upload">
+    </form>
 
-    
-  
-
-
-
-
+    <footer>
+        <p>All rights reserved</p>
+    </footer>
+</body>
+</html>
